# EmbassyExploration

./: Cargo.toml  README.md  bacon.toml  justfile
app/: Cargo.toml
app/src/: main.rs
common-lib/: Cargo.toml
common-lib/src/: cli.rs  frame_ascii.rs  gpio_mock.rs  lib.rs  matrix.rs  scroller.rs  transport.rs  uarte.rs
hw-lib/: Cargo.toml
hw-lib/src/: lib.rs
hw-lib/tests/: test.rs
src/: main.rs  matrix.rs
