[package]
name = "target-tests"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
assign-resources = "0.4.1"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.7.0", features = [ "arch-cortex-m", "defmt", "executor-thread"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-nrf = { version = "0.3.1", features = [
    "defmt", 
    "gpiote", 
    "nrf52833",
    "time",
    "time-driver-rtc1",
    "nfc-pins-as-gpio",
] }
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
phf = { version = "0.11", default-features = false, features = ["macros"] }


[dev-dependencies]
defmt-test = "0.3"

[lib]
harness = false
test = false

[[test]]
name = "test"
harness = false


